--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="facebook">#3b5998</color>
     <color name="twitter">#55ACEE</color>
     <color name="linkedin">#287bbc</color>
+    <color name="googleplus">#D34836</color>
 
 </resources>
