--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -11,7 +11,7 @@
         android:text="Login via Facebook"
         android:id="@+id/facebook"
         android:layout_gravity="center_horizontal"
-        android:background="#3b5998"
+        android:background="@color/facebook"
         android:layout_margin="8dp"
         android:textColor="#ffffffff" />
     <Button
@@ -20,7 +20,7 @@
         android:text="Login via Twitter"
         android:id="@+id/twitter"
         android:layout_gravity="center_horizontal"
-        android:background="#55ACEE"
+        android:background="@color/twitter"
         android:layout_margin="8dp"
         android:textColor="#ffffffff"/>
     <Button
@@ -29,7 +29,7 @@
         android:text="Login via LinkedIn"
         android:id="@+id/linkedin"
         android:layout_gravity="center_horizontal"
-        android:background="#287bbc"
+        android:background="@color/linkedin"
         android:layout_margin="8dp"
         android:textColor="#ffffffff"/>
     <Button
@@ -38,7 +38,7 @@
         android:text="Login via GooglePlus"
         android:id="@+id/googleplus"
         android:layout_gravity="center_horizontal"
-        android:background="#D34836"
+        android:background="@color/googleplus"
         android:layout_margin="8dp"
         android:textColor="#ffffffff"/>
 </LinearLayout>
