--- a/app/src/main/res/layout/friends_list_fragment.xml
+++ b/app/src/main/res/layout/friends_list_fragment.xml
@@ -10,7 +10,7 @@
     android:background="#CCCCCC">
 
     <ListView
-        android:id="@+id/list"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
