--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -59,7 +59,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="null"
+                android:text="(id)"
                 android:maxLines="3"
                 android:singleLine="false"
                 android:id="@+id/id"
